--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,53 +1,49 @@
 .form {
-  width: 400px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding: 15px;
-  outline: 1px solid #0026ff;
+  align-items: center;
+  background-color: #3e6496;
+  border: 3px solid #000;
+  border-radius: 15px;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+  padding: 20px;
+  width: 300px;
 }
 
-.form label {
-  font-size: 16px;
+label {
+  margin-bottom: 30px;
+  color: rgb(0, 0, 0);
 }
 
-.form input {
-  display: block;
-  width: 250px;
-  font-size: 14px;
-  padding: 6px 10px 4px;
-  margin-top: 5px;
-  margin-bottom: 20px;
-  border: 1px solid #cecece;
-  border-radius: 8px;
-  background-color: #f6f6f6;
-  outline: none;
+label:last-child {
+  margin-bottom: 0px;
 }
 
-.form input:focus {
-  border-color: #2ee59d;
+.inputName {
+  margin-left: 15px;
+  height: 20px;
+}
+.inputNumber {
+  margin-left: 10px;
+  height: 20px;
+}
+
+.buttonEditor {
+  border: transparent;
+  border-radius: inherit;
+  height: 30px;
+  width: 100px;
+  color: rgb(112, 112, 112);
   background-color: #fff;
-}
-
-.button {
-  display: block;
-  padding: 5px;
-  font-size: 16px;
-  background-color: #fff;
-  border: 1px solid #2ee59d;
-  border-radius: 45px;
-  text-decoration: none;
-  outline: none;
-  transition: all ease 250ms;
   cursor: pointer;
 }
-
-.button:hover,
-.button:focus {
-  background-color: #2ee59d;
-  box-shadow: 0px 5px 20px rgb(46 229 157 / 40%);
-  color: #fff;
+.buttonEditor:hover {
+  color: rgb(202, 202, 202);
+  background-color: rgb(41, 57, 71);
 }
 
-.button:active {
-  transform: translateY(2px);
+.title {
+  color: #fff;
 }
