--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -16,7 +16,11 @@
 }
 
 .label {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-size: 16px;
   margin-top: 20px;
+
+  color: rgb(255, 255, 255);
 }
