--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,6 +1,6 @@
 .contacts {
   padding-left: 40px;
-  color: white;
+  color: blue;
   font-size: 20px;
 }
 
@@ -9,6 +9,6 @@
 }
 
 .contactsItem {
-  color: white;
+  color: blue;
   font-size: 20px;
 }
