--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,20 +1,20 @@
 .form {
   align-items: center;
-  background-color: #3e6496;
-  border: 3px solid #000;
+  background-color: #ffffffa9;
+  border: 3px solid blue;
   border-radius: 15px;
   color: #fff;
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin: auto;
-  padding: 20px;
+  padding: 10px;
   width: 300px;
 }
 
 label {
   margin-bottom: 30px;
-  color: rgb(0, 0, 0);
+  color: blue;
 }
 
 label:last-child {
@@ -24,7 +24,16 @@ label:last-child {
 .inputName {
   margin-left: 15px;
   height: 20px;
+  border: 2px solid blue;
+  border-radius: 50px;
 }
+
+.inputName:hover,
+.inputName:focus,
+.inputName:active {
+  border: 2px solid gold;
+}
+
 .inputNumber {
   margin-left: 10px;
   height: 20px;
@@ -32,16 +41,20 @@ label:last-child {
 
 .buttonEditor {
   border: transparent;
-  border-radius: inherit;
+  border-radius: 30px;
   height: 30px;
   width: 100px;
-  color: rgb(112, 112, 112);
+  color: blue;
   background-color: #fff;
   cursor: pointer;
+  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
+    0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
 }
-.buttonEditor:hover {
-  color: rgb(202, 202, 202);
-  background-color: rgb(41, 57, 71);
+.buttonEditor:hover,
+.buttonEditor:focus {
+  color: white;
+  background-color: blue;
+  border-color: blue;
 }
 
 .title {
