--- a/src/components/ContactListElem/ContactListElem.module.css
+++ b/src/components/ContactListElem/ContactListElem.module.css
@@ -19,14 +19,15 @@
   border-radius: 30px;
   height: 30px;
   width: 100px;
-  color: rgb(112, 112, 112);
+  color: blue;
   background-color: #fff;
   cursor: pointer;
+  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
+    0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
 }
-.buttonEditor:hover,
-.button:focus {
-  color: rgb(202, 202, 202);
-  background-color: rgb(41, 57, 71);
+.buttonEditor:hover {
+  color: white;
+  background-color: blue;
 }
 
 .buttonEditor:active {
